# ctx

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  deny.toml
benchmarks/: retrieval_cases.jsonl
docs/: architecture.md  layered-memory-system-spec.md  retrieval-benchmark.md  spec.md  stress-results.md  stress-testing.md
docs/adr/: 0001-native-layered-memory-engine.md
docs/goals/: native-layered-memory-engine.md
scripts/: bump_version.py  docs_stress.py  retrieval_bench.py
skills/ctx/: SKILL.md
skills/ctx/agents/: openai.yaml
src/: agents.rs  app.rs  arxiv.rs  constants.rs  context.rs  crawl.rs  embeddings.rs  hooks.rs  input.rs  install.rs  jobs.rs  journal.rs  l1.rs  l2.rs  l3.rs  main.rs  manifest.rs  markdown.rs  memory.rs  models.rs  offload.rs  output.rs  retrieve.rs  sanitize.rs  snapshot.rs  source.rs  storage.rs  time.rs  util.rs
tests/: cli.rs
