[package]
name = "ctx"
version = "0.2.0"
edition = "2024"
license = "Unlicense"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
fastembed = { version = "=5.13.4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
hf-hub = { version = "=0.5.0", default-features = false, features = ["ureq"] }
hex = "0.4.3"
iana-time-zone = "0.1.64"
rayon = "1.12.0"
regex = "1.12.2"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls"] }
pulldown-cmark = "0.13.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
toon-format = { version = "0.5.0", default-features = false }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.27.0"
tiny_http = "0.12.0"
